Primeiro commit da v1, fiz atualizações do about do meu projeto, adicionei cards e icones, todos com formatação e estilos unicos

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
+  <!-- Dentro da tag <head> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-  <title>Vite + React + TS</title>
+  <title>Portfolio Miguel</title>
 </head>
 
 <body>
